# hybrid-recommender-for-career-path

./: .gitignore  DEPLOYMENT.md  README.md  app.py  career_path_recommender.py  debug_recommender.py  debug_skill_gap_direct.py  debug_skill_gap_test.py  demo_production_usage.py  generate_large_dataset.py  packages.txt  pyproject.toml  report.md  requirements-full.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py  test_full_pipeline.py  test_installation.py  test_model_inference.py  update.md
app/: streamlit_app.py  utils.py
configs/: bert4rec_config.json  system_config.yaml
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
models/bert4rec/: artifacts.json  job_vocab.json  model_config.json  vocab.json
notebooks/: quick_demo.ipynb
src/ingest/: download_and_prepare.py  esco_loader.py  generate_synthetic_data.py  text_to_esco_mapper.py
src/models/: bert4rec.py  career_path_recommender.py  train_path_model.py
src/reasoner/: skill_gap.py
tests/: test_cli.sh  test_inference.py  test_mapping.py
